[package]
name = "reverse-text-search"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.130"
serde_derive = "1.0.130"
bincode = "1.3.3"
